# my_quantum_simulator_with_gpu

./: .env  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  IPC_COMPARISON.md  LICENSE  Makefile  README.md  bit.cpp  bit.cu  bit.hpp  build.sh  cache.rb  config.yaml  example.qasm  gate.cpp  gate.cu  init_table.sql  insert_cache.sql  main.cpp  main.py  myadd.cpp  qmdd_sim  quantum_cache.db  quantum_circuit.qasm  requirements.txt  set_up.py  setup.py  setup_gui_communication.sh  shor.qasm  test_ipc_client.cpp  test_ipc_performance.sh
.github/workflows/: makefile.yml
GUI/: GUI.sln
GUI/GUI/: App.xaml.cs  AppShell.xaml  GUI.csproj  GUI.sln  MainPage.xaml
GUI/GUI/GUI/: App.xaml  App.xaml.cs  GUI.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
GUI/GUI/GUI.Shared/: GUI.Shared.csproj  _Imports.razor
GUI/GUI/GUI.Shared/Layout/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor  NavMenu.razor.css
GUI/GUI/GUI.Shared/Models/: CircuitModels.cs  SimulationResult.cs
GUI/GUI/GUI.Shared/Pages/: Composer.razor  Composer.razor.backup  Composer.razor.css  Composer.razor.js  Counter.razor  Heartbeat.razor  Home.razor
GUI/GUI/GUI.Shared/Services/: IFormFactor.cs  IQMDDSimulatorClient.cs  QMDDSimulatorClient.cs
GUI/GUI/GUI.Shared/wwwroot/: app.css
GUI/GUI/GUI.Shared/wwwroot/models/: blackhole.glb
GUI/GUI/GUI.Web/: GUI.Web.csproj  Program.cs
GUI/GUI/GUI.Web/Components/: App.razor  _Imports.razor
GUI/GUI/GUI.Web/Properties/: launchSettings.json
GUI/GUI/GUI.Web/Services/: FormFactor.cs  QMDDSimulatorClient.cs
GUI/GUI/GUI.Web/wwwroot/shaders/: vein.frag
GUI/GUI/GUI/Components/: _Imports.razor
GUI/GUI/GUI/Services/: FormFactor.cs
data/: benchmark.xlsx  erwin_schrodinger_1933_source.psd  ~$benchmark.xlsx
docs/: NGC.sty  ark_bachelor_thesis_slide.pptx  bachelor_thesis.tex  bachelor_thesis_script.docx  gpu.adoc  present.pptx  ~$ark_bachelor_thesis_slide.pptx  ~$原稿.docx
models/: bit.cpp  bit.cu  bit.h  bit.hpp  calculation.cpp  calculation.hpp  gate.cpp  gate.h  gate.hpp
scripts/: run.sh.template
src/array/+gate/: bGate.m  barencoGate.m  cSwapGate.m  cpGate.m  csGate.m  csxGate.m  cx1Gate.m  cx2Gate.m  czGate.m  czsGate.m  dGate.m  dbGade.m  dcnotGate.m  ecrGate.m  fFredkinGate.m  fSimGate.m  gGate.m  hGate.m  iSwapGate.m  mGate.m  nGate.m  pGate.m  pgGate.m  phGate.m  rccxGate.m  rxGate.m  rxxGate.m  rxyGate.m  ryGate.m  ryyGate.m  rzGate.m  rzzGate.m  sGate.m  squareISwapGate.m  squareSwapGate.m  swapAlphaGate.m  swapGate.m  sycGate.m  tGate.m  toffGate.m  (+6 more)
src/atomic/: atomic.h  atomic_arm64.c
src/atomic/arm32/: atomic_arm32.c  atomic_arm32.s
src/atomic/arm64/: atomic_arm64.c  atomic_arm64.s
src/atomic/x86/: atomic_x86.c  atomic_x86.s
src/atomic/x86_64/: atomic_x86_64.c  atomic_x86_64.s
src/common/: calculation.cpp  calculation.hpp  config.cpp  config.hpp  constant.cpp  constant.hpp  ipc_shared_memory.cpp  ipc_shared_memory.hpp  jniUtils.cpp  jniUtils.hpp  mathUtils.cpp  mathUtils.hpp  monitor.cpp  monitor.hpp  operationCacheClient.cpp  operationCacheClient.hpp
src/java/: NativeImageBridge.java  OperationCache.java  OperationResult.java  build.gradle  compile.sh  compile_graalvm.sh  compile_jni.sh  graal_isolate_dynamic.h  gradle.properties  liboperation-cache.h  liboperation-cache_dynamic.h  operationCacheClient.cpp  operationCacheClient.hpp  pom.xml  reflect-config.json  settings.gradle
src/java/jni_headers/: OperationCache.h
src/java/maven_target/maven-archiver/: pom.properties
src/java/src/main/java/: OperationCache.java  OperationResult.java
src/macOS/: Package.resolved  Package.swift  gate.metal  gate.swift  qmdd.h  qmdd.m  qmdd.metal  qmdd.swift
src/macOS/.build/: build.db  debug.yaml  workspace-state.json
src/macOS/.build/arm64-apple-macosx/debug/: description.json  macOS
src/macOS/.build/repositories/swift-numerics-d936ec6c/: FETCH_HEAD  config  packed-refs
src/macOS/Sources/: calculation.metal  calculation.swift  constant.swift  gate.swift  operationCache.swift  qmdd.swift  state.swift  uniqueTable.swift
src/macOS/macOS/: ContentView.swift  Item.swift  QuantumGateManager.h  QuantumGateManager.mm  README.md  base.metal  complex.metal  gate.metal  gate.metallib  macOSApp.swift  mathUtils.metal  quantum_gate_test.cpp  state.metal  test.swift
src/macOS/macOS.xcodeproj/: project.pbxproj
src/macOS/macOSTests/: macOSTests.swift
src/macOS/macOSUITests/: macOSUITests.swift  macOSUITestsLaunchTests.swift
src/models/: CaffeineBridge.cpp  CaffeineBridge.hpp  bit.cpp  bit.cu  bit.cuh  bit.hpp  calculation.cpp  calculation.hpp  circuit.cpp  circuit.hpp  gate.cpp  gate.cu  gate.cuh  gate.hpp  gate.m  node.cpp  node.hpp  operationCache.cpp  operationCache.hpp  qmdd.cpp  qmdd.cuh  qmdd.go  qmdd.h  qmdd.hpp  state.cpp  state.cu  state.cuh  state.hpp  uniqueTable.cpp  uniqueTable.hpp  uniquetable.cpp  uniquetable.hpp  yield.go
src/modules/: fiber.cpp  fiber.hpp  fiber.tpp  simd.hpp  threadPool.cpp  threadPool.hpp
src/rust/: Cargo.toml  lib.rs  unique_table.rs
src/test/3_17tc/: 3_17tc.tfc  bench317tc.cpp  bench317tc.hpp
src/test/5mod5tc/: 5mod5tc.tfc  bench5mod5tc.cpp  bench5mod5tc.hpp
src/test/Grover/: grover.cpp  grover.hpp
src/test/QASMBench/small/adder_n10/: adderN10.cpp  adderN10.hpp
src/test/QASMBench/small/adder_n4/: adderN4.cpp  adderN4.hpp
src/test/QASMBench/small/basis_change_n3/: basisChangeN3.cpp  basisChangeN3.hpp
src/test/QFT/: QFT.cpp  QFT.hpp
src/test/Shor/: shor.cpp  shor.hpp
src/test/ham3tc/: beanchHam3tc.cpp  benchHam3tc.cpp  benchHam3tc.hpp  ham3tc.cpp  ham3tc.hpp  ham3tc.tfc
src/test/hwb4tc/: benchHwb4tc.cpp  benchHwb4tc.hpp  hwb4tc.tfc
src/test/hwb5tc/: benchHwb5tc.cpp  benchHwb5tc.hpp  hwb5tc.tfc
src/test/random/: randomRotate.cpp  randomRotate.hpp  randomRotate.py
src/test/xor5d1/: benchXor5d1.cpp  benchXor5d1.hpp  xor5d1.tfc
src/translator/OpenQASM3/: OpenQASM3.g4  fallen.cpp  fallen.hpp
translator/: compile.sh  lexer.l  parser.py  qasm.g4  qasm.interp  qasmLexer.interp  qasmLexer.py  qasmLexer.tokens  qasmListener.py  qasmParser.py
(+411 files in other folders)
